# geomag_transformations

./: Package_File_Structure.txt  README.md  pyproject.toml
examples/: plot_all_geomagnetic_grids.py  run_coordinate_test.py  run_field_test.py  run_time_test.py
geomag_transformations/: __init__.py  coordinates.py  field.py  parameters.py  times.py
geomag_transformations.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
